# fast_chemail-rs

./: .gitignore  AUTHORS.md  CONTRIBUTORS.md  Cargo.toml  README.md
src/: errors.rs  lib.rs  parser.rs
tests/: lib.rs  table.rs  table_err.csv  table_ok.csv
