[package]
name = "fast_chemail"
version = "0.9.4"
description = "Check email address"

authors = ["Jonas Me (https://gitlab.com/vulkano)"]
repository = "https://gitlab.com/fast_chemail/fast_chemail-rs"
documentation = "https://docs.rs/fast_chemail"

readme = "README.md"
keywords = ["check", "email"]
license = "MPL-2.0"

[dependencies]
ascii_utils = "^0"
